# terra2

./: .clang-format  .clang-tidy  .cmake-format.py  .gitignore  .gitmodules  .pre-commit-config.yaml  Armarm_group_base_linkend_effector_5000_1.000000_1.000000.ikcache  Doxyfile  README.md  arm_pos_cmd.py  camera_calibration.npz  defaults.yaml  drives.urdf  frames_2025-01-15_14.44.25.gv  liftoff.sh  test.txt
src/autonomous_navigation/: package.xml  setup.py
src/autonomous_navigation/autonomous_navigation/: controller.py  costmap.py  costmap_real.py  costmap_sim.py  ekf_localization.py  ekf_node.py  global_planner.py  ground_plane_detection.py  imu_calibration.py  kalman_localization.py  led_node.py  local_planner.py  localization.py  localization_sim.py  nav_ackerman.py  nav_ackerman_real.py  nav_control_loop.py  nav_control_methods_demo.py  new_kalman.py  object_detection.py  object_recognition_sim.py  path_planner.py  planner.py  planner2.py  rtk_filtered.py  rtk_localization.py  state_machine.py  ukf.py  ukf_sim.py  ukf_yaw.py  waypoint_controller.py
src/autonomous_navigation/config/: nav2_costmap_params.yaml  sim_waypoints_condensed.yaml  waypoints.yaml  waypoints_duff.yaml  waypoints_engquad.yaml  waypoints_engquad2.yaml  waypoints_long.yaml  waypoints_real.yaml  waypoints_test_site_utah.yaml
src/autonomous_navigation/launch/: costmap.launch.py  localization_real.launch.py  navigation.launch.py  run_navigation.launch.py  sim_autonomy.launch.py
src/camera_simulation/: package.xml  setup.cfg  setup.py
src/camera_simulation/camera_simulation/: camera_controller.py
src/camera_simulation/launch/: camera_simulation_launch.launch.py
src/camera_simulation/resource/: camera.urdf
src/camera_simulation/worlds/: camera_world.wbt
src/cmr_arm/: CMakeLists.txt  README.md  package.xml
src/cmr_arm/config/: arm_specs.toml  joystick_direct_control.toml
src/cmr_arm/launch/: arm.launch.py  robot_state_publisher.launch.py
src/cmr_arm/src/: inverse_kinematics.cpp  inverse_kinematics_main.cpp  joystick_direct_control.cpp  joystick_direct_control_main.cpp  joystick_forward_kinematics.cpp  joystick_forward_kinematics_main.cpp
src/cmr_arm/urdf/: arm_description.urdf  arm_description.urdf.xacro  arm_macros.urdf.xacro  no_mesh_arm_description.urdf  no_mesh_arm_description.urdf.xacro
src/cmr_arm_sim/: README.md  config.rviz  package.xml  setup.cfg  setup.py
src/cmr_arm_sim/launch/: display.launch.py
src/cmr_arm_sim/meshes/: base_link.stl  lower_arm.stl  shoulder.stl  upper_arm.stl  wrist_rotate.stl  wrist_twist_rotate.stl
src/cmr_arm_sim/urdf/: arm_2024.urdf  arm_2024.urdf.xacro
src/cmr_cams/: CMakeLists.txt  README.md  package.xml  setup.cfg  setup.py
src/cmr_cams/cmr_cams/: __init__.py  object_detection.py  web_stream.py
src/cmr_cams/config/: .gitignore  ARCam2.toml  ARCam3.toml  arm_fk.toml.disabled  cam10.toml  cam11.toml  cam12.toml  cam7.toml  cam8.toml  cam9.toml  camA.toml  camEnd.toml  drives.toml  gps.toml.disabled  gps_fake.toml  ik_config.toml  ik_config.toml.diasabled  joystick_direct_control.toml.disabled
src/cmr_cams/launch/: ar_tag_demo.launch.py  default.launch.py  gui_server.launch.py  object_detection.launch.py  web_stream.launch.py
src/cmr_control/: CMakeLists.txt  README.md  controllers.xml  hardware.xml  package.xml
src/cmr_control/config/: arm_controllers.yaml  astro_controllers.yaml  astro_motor_controllers.yaml  drives_controllers.yaml  ik_controllers.yaml
src/cmr_control/launch/: arm.launch.py  demo_arm.launch.py  demo_drives.launch.py  forward_k_arm.launch.py
src/cmr_control/src/: arm_system.cpp  astro_motor.cpp  astro_sensor.cpp  astro_sensor_broadcaster.cpp  astro_sensor_broadcaster_params.yaml  base_arm_system.cpp  drives_system.cpp  gps_client.cpp  gps_client_main.cpp  mock_arm_system.cpp
src/cmr_demo/: CMakeLists.txt  README.md  package.xml
src/cmr_demo/config/: demo.toml  demo1.toml  demo2.toml
src/cmr_demo/launch/: demo.launch.py
src/cmr_demo/src/: demo_node.cpp  demo_node_main.cpp  gps_fake.cpp  gps_fake_main.cpp
src/cmr_fabric/: CMakeLists.txt  README.md  package.xml
src/cmr_fabric/src/: dependency_manager.cpp  dependency_manager_node.cpp  fabric_node.cpp  fault_handler.cpp  fault_handler_node.cpp  lifecycle_helpers.cpp  lifecycle_manager.cpp  lifecycle_manager_node.cpp
src/cmr_fabric/test/: fabric_test.cpp  fabric_test_node.hpp  fault_test.sh
src/cmr_fabric/tests/: fabric_test.cpp
src/cmr_keyboard/: README.md  package.xml  setup.cfg  setup.py
src/cmr_keyboard/cmr_keyboard/: computer_cam_publisher_node.py  key_selector.py  keyboard_detector.py  keyboard_edges.py  keyboard_lights.py  roi_selection.py  zed_keyboard.py
src/cmr_msgs/: CMakeLists.txt  README.md  package.xml
src/cmr_msgs/action/: TestTargetPosition.action
src/cmr_msgs/msg/: ArmJointEffort.msg  AutonomyDrive.msg  AutonomyInfo.msg  ControllerReading.msg  Error.msg  IMUSensorData.msg  JoystickReading.msg  MiniArmDegree.msg  MotorData.msg  MotorReadData.msg  MotorWriteBatch.msg  ObstaclePositions.msg  SensorReadBatch.msg  State.msg
src/cmr_msgs/srv/: AcquireDependency.srv  GetNodeState.srv  NotifyDeactivate.srv  RecoverFault.srv  ReleaseDependency.srv  SiteAnalyze.srv
src/cmr_nav/: CMakeLists.txt  README.md  navigator_plugins.xml  package.xml
src/cmr_nav/bt/: ar_tag_bt.xml  ar_tag_no_print.xml  ar_tag_test.xml  aruco_test.xml  navigate_to_pose_w_replanning_and_recovery.xml  navigate_w_replanning_distance.xml  pose_generation_test.xml
src/cmr_nav/launch/: display.launch.py
src/cmr_nav/params/: nav2_params.yaml
src/cmr_nav/src/: ar_tag_navigate.cpp  autonomy_control_node.cpp  (+8 more)
src/cmr_navigation/: README.md  package.xml  setup.cfg  setup.py
src/cmr_param_gui/: README.md  package.xml  setup.cfg  setup.py
src/cmr_py_test/: README.md  package.xml  setup.py
src/cmr_utils/: CMakeLists.txt  README.md  package.xml
src/rover_description/: CMakeLists.txt  package.xml
src/rover_gazebo/: package.xml  setup.py
src/swerve_controller/: package.xml  setup.py
src/usb_camera_publisher/: CMakeLists.txt  README.md  package.xml  setup.py
(+725 files in other folders)
