<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>camera_simulation</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="aks237@cornell.edu">cmr</maintainer>
  <license>TODO: License declaration</license>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>webots_ros2_msgs</depend>
  <exec_depend>webots_ros2_driver</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>numpy</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
