<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>cmr_arm</name>
  <version>0.0.0</version>
  <description>This package includes software to control the rover arm with both forward and inverse kinematics.</description>
  <maintainer email="team@cornellmarsrover.org">CMR</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>cmr_msgs</depend>
  <depend>cmr_utils</depend>
  <depend>cmr_fabric</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <!-- Add additional dependencies here. -->

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
