<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>cmr_fabric</name>
  <version>0.0.0</version>
  <description>Framework for node configuration, management, and fault handling</description>
  <maintainer email="team@cornellmarsrover.org">CMR</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_lifecycle</depend>
  <depend>lifecycle_msgs</depend>
  <depend>std_msgs</depend>
  <depend>cmr_msgs</depend>
  <depend>cmr_utils</depend>

  <test_depend>launch_testing</test_depend>

  <!-- Add additional dependencies here. -->

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
