<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
    <name>cmr_keyboard</name>
    <version>0.0.0</version>
    <description>Package for autonomous keyboard typing with the arm</description>
    <maintainer email="team@cornellmarsrover.org">CMR</maintainer>
    <license>MIT</license>

    <depend>ultralytics</depend>
    <depend>opencv_python</depend>

    <export>
        <build_type>ament_python</build_type>
    </export>
</package>