<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
    <name>cmr_param_gui</name>
    <version>0.0.0</version>
    <description>Basic Parameter GUI for Rover Drives and Arm Dev (NOT FOR COMP)</description>
    <maintainer email="team@cornellmarsrover.org">CMR</maintainer>
    <license>MIT</license>

    <!-- Add additional dependencies here. -->
    <depend>std_msgs</depend>
    <test_depend>python3-pytest</test_depend>

    <export>
        <build_type>ament_python</build_type>
    </export>
</package>