<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
    <name>cmr_py_test</name>
    <version>0.0.0</version>
    <description>Integration and node-level unit tests in Python</description>
    <maintainer email="team@cornellmarsrover.org">CMR</maintainer>
    <license>MIT</license>

    <depend>rclpy</depend>
    <depend>cmr_msgs</depend>
    <depend>std_srvs</depend>
    <depend>lifecycle_msgs</depend>
    <depend>cmr_fabric</depend>
    <!-- Add additional dependencies here. -->

    <test_depend>python3-pytest</test_depend>

    <export>
        <build_type>ament_python</build_type>
    </export>
</package>