<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rover_gazebo</name>
  <version>0.0.1</version>
  <description>Gazebo simulation for rover</description>
  <maintainer email="aks237@cornell.edu">Ajay</maintainer>
  <license>Apache-2.0</license>

  <depend>controller_manager</depend>
  <depend>gazebo_ros</depend>
  <depend>gazebo_ros2_control</depend>
  <depend>ros2_control</depend>
  <depend>ros2_controllers</depend>
  <depend>ros2launch</depend>
  <depend>swerve_controller</depend>
  <depend>swerve_robot_description</depend>
  <depend>teleop_twist_joy</depend>
  <depend>teleop_twist_keyboard</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
