<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
    <name>usb_camera_publisher</name>
    <version>0.0.0</version>
    <description>Gonna replace</description>
    <maintainer email="team@cornellmarsrover.org">CMR</maintainer>
    <license>MIT</license>

    <!-- Add additional dependencies here. -->

    <test_depend>python3-pytest</test_depend>
    <exec_depend>rclpy</exec_depend>
    <exec_depend>sensor_msgs</exec_depend>
    <exec_depend>foxglove_compressed_video_transport</exec_depend>
    <exec_depend>opencv-python</exec_depend>
    
    <exec_depend>camera_info_manager_py</exec_depend>
    <exec_depend>foxglove_msgs</exec_depend>

    <export>
        <build_type>ament_python</build_type>
    </export>
</package>